--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">Prerak Raja</a></h1>
+      <h1><a href="index.html">Giorgio Eller</a></h1>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -71,10 +71,11 @@
           <li><a href="#about"><span>About</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#experience"> <span>Experience</span></a></li>
-<!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-          <li><a href="#portfolio"> <span>Projects</span></a></li>
+          <li><a href="#projects"> <span>Projects</span></a></li>
+          <!-- <li><a href="#portfolio"> <span>Projects</span></a></li> -->
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <!-- Using the resume file from my Google Drive -->
+          <li><a href="https://drive.google.com/file/d/1oTBjqzrBwhjQlbqk13WOiJ9vXRsIaCsz/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
