--- a/index.html
+++ b/index.html
@@ -71,21 +71,19 @@
           <li><a href="#about"><span>About</span></a></li>
           <li><a href="#education"> <span>Education</span></a></li>
           <li><a href="#experience"> <span>Experience</span></a></li>
-          <li><a href="#projects"> <span>Projects</span></a></li>
-          <!-- <li><a href="#portfolio"> <span>Projects</span></a></li> -->
+          <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
           <!-- Using the resume file from my Google Drive -->
           <li><a href="https://drive.google.com/file/d/1oTBjqzrBwhjQlbqk13WOiJ9vXRsIaCsz/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
-          <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
 
       <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="https://www.linkedin.com/in/giorgio-eller-dos-santos/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/giorgioeller" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:contact.giorgio.eller@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
