--- a/index.html
+++ b/index.html
@@ -105,10 +105,15 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
-            to the underlying concepts and applying them vividly to various projects, my love for these domains came into being.
-            I am a passionate individual who thrives to build and apply algorithms to solve real-world industry problems.
+          <p>Highly motivated and detail-oriented data analyst with a strong foundation in data-
+            driven decision-making and a passion for extracting value-adding insights from data. My
+            proficiency in data manipulation, visualization, and building storytelling-based reports,
+            combined with excellent problem-solving skills, allows me to excel in a fast-paced
+            analytical environment. I am committed to leveraging data to drive innovation and make
+            informed strategic decisions.
           </p>
+
+          <!-- CONTINUE FROM HERE -->
           <div class="row">
             <div class="col-lg-6">
               <ul>
