--- a/index.html
+++ b/index.html
@@ -105,26 +105,23 @@
           <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Highly motivated and detail-oriented data analyst with a strong foundation in data-
-            driven decision-making and a passion for extracting value-adding insights from data. My
+          <p>Highly motivated and detail-oriented data analyst with a strong foundation in data-driven decision-making and a passion for extracting value-adding insights from data. My
             proficiency in data manipulation, visualization, and building storytelling-based reports,
             combined with excellent problem-solving skills, allows me to excel in a fast-paced
             analytical environment. I am committed to leveraging data to drive innovation and make
             informed strategic decisions.
           </p>
 
-          <!-- CONTINUE FROM HERE -->
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> contact.giorgio.eller@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +55 (48) 99669-9423</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Florianópolis, Brazil</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
               </ul>
             </div>
           </div>
