Updated "About" section
Inserted correct icons for corresponding topics

--- a/index.html
+++ b/index.html
@@ -137,52 +137,54 @@
         <h2>Interests</h2>
       </div>
 
+      <!-- CONTINUE FROM HERE -->
+      <!-- .svg files obtained from https://iconify.design/ -->
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #ffbb2c;"></i>
+            <img src="assets/img/about/bar-chart-box-line.svg" style="margin:0px 5px"/>
             <h3>Business Intelligence</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #5578ff;"></i>
+            <img src="assets/img/about/database-2-line.svg" style="margin:0px 5px"/>
             <h3>Big Data</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="eos-icons:cloud-computing-outlined" style="color: #e80368;"></i>
+            <img src="assets/img/about/cloud-computing-outlined.svg" style="margin:0px 5px"/>
             <h3>Cloud Computing</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ant-design:box-plot-outlined" style="color: #1c7d32;"></i>
+            <img src="assets/img/about/box-plot-outlined.svg" style="margin:0px 5px"/>
             <h3>Statistical Analysis</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="material-symbols:line-axis" style="color: #28a745;"></i>
+            <img src="assets/img/about/line-axis.svg" style="margin:0px 5px"/>
             <h3>Predictive Modeling</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="eos-icons:iot" style="color: #f1081f;"></i>
+            <img src="assets/img/about/iot.svg" style="margin:0px 5px"/>
             <h3>Internet of Things</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #47aeff;"></i>
+            <img src="assets/img/about/camera-3-line.svg" style="margin:0px 5px"/>
             <h3>Computer Vision</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-code-s-slash-fill" style="color: #ffc107;"></i>
+            <img src="assets/img/about/code-s-slash-fill.svg" style="margin:0px 5px"/>
             <h3>Software Development</h3>
           </div>
         </div>
