--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
         <h2>Interests</h2>
       </div>
 
-      <!-- CONTINUE FROM HERE -->
       <!-- .svg files obtained from https://iconify.design/ -->
       <div class="row">
         <div class="col-lg-3 col-md-4">
@@ -193,8 +192,7 @@
     </div><!-- End Interests -->
   </section><!-- End About Section -->
 
-
-
+  
   <!-- ======= Education Section ======= -->
   <section id="education" class="services">
     <div class="container">
@@ -206,30 +204,15 @@
 
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/ASU.jpg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>MS in Computer Science</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">Janurary 2021 - Present</h5>
+              <img src="assets/img/education/UFSC.png" class="img-fluid" alt="">
+              <h5 style="text-align:left;padding: 0px 10px; padding-top: 15px">Federal University of Santa Catarina</h5>
+              <h5 style="text-align:left;padding: 0px 10px">Bachelor's Degree in Economics</h5>
+              <h6 style="text-align:left;color:#fff;padding: 0px 10px;"><em>August 2016 - March 2022</em></h6>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
-                <li>Distributed Database Systems</li>
-                <li>Cloud Computing</li>
-                <li>Foundation Of Algorithms</li>
-              </ul>
-            </div>
-            <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
-              <img src="assets/img/education/au.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
-              <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>B.Tech. in Information and Communication Technology</em></p>
-              <h5 style="text-align:left;padding: 0px 10px;">July 2014 - May 2018</h5>
-              <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
-              <ul style="text-align:left;color:#fff;">
-                <!-- <li>Data Structures &amp; Algorithms</li> -->
-                <li>Database Management Systems</li>
-                <!-- <li>Operating Systems</li> -->
-                <li>Algorithms &amp; Optimization for Big Data</li>
-                <li>Machine Learning</li>
-                <!-- <li>Computer Vision</li> -->
+                <li>Statistics</li>
+                <li>Portfolio Optimization</li>
+                <li>Capital Markets</li>
               </ul>
             </div>
           </div>
@@ -247,11 +230,11 @@
 
          <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 0px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/Microsoft.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Machine Learning</h4>
+              <h4>PL-300: Power BI Data Analyst Associate</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/2BTJ636Q2E93?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href= "https://learn.microsoft.com/api/credentials/share/en-us/GiorgioEllerdosSantos-1635/7155848D939B5E2D?sharingId" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
            </div>
@@ -259,60 +242,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 370px; top: 0px;">
           <div class="portfolio-wrap">
-            <img src="assets/img/certification/stanford.jpg" class="img-fluid" alt="">
+            <img src="assets/img/certification/Google.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Algorithms-Design and Analysis</h4>
+              <h4>Data Analytics Professional</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app" style="position: absolute; left: 740px; top: 0px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/ucsd.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Algorithmic Toolbox</h4>
-              <div class="portfolio-links">
-                <a href="https://coursera.org/share/98bbfb990484fac370d5e5ed14334ea4" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 0px; top: 218.875px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Deep Learning with Tensorflow</h4>
-              <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1FSwPt19EzY_tpvqkE6igtLf3gccKcssC/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 370px; top: 218.875px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/ibm.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Machine Learning with Python</h4>
-              <div class="portfolio-links">
-                <a href="https://drive.google.com/file/d/1gimySw_NPzCJ54dqZ2j2wYyz-JDOg-S0/view?usp=sharing" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project" style="position: absolute; left: 740px; top: 218.875px;">
-          <div class="portfolio-wrap">
-            <img src="assets/img/certification/dai.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Neural Networks and Deep Learning</h4>
-              <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/ELXZ6FE2BU7X?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate/" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://coursera.org/verify/MQ5VZ6KU2T3C" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -326,7 +260,7 @@
   <!-- End Education Section -->
 
 
-
+  <!-- CONTINUE FROM HERE -->
   <!-- Start Experience Section -->
 
   <section id="experience" class="services">
