Updated Home and Experience sections
Updated Home and Experience sections, and deleted unused Education section images.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Giorgio Eller</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -271,52 +271,40 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Arizona State University</a><br> </h4>
-                <h5 style="text-align:left;">January 2021 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <h4 style="text-align:left;"><a href="https://www.cge.sc.gov.br/" style="color:#12d640">State Accountability Office</a><br> </h4>
+                <h5 style="text-align:left;">Data Analyst</h5>
+                <p style="text-align:left;color:#fff"><em>June 2023 - Present</em></p>
                 <ul style="text-align:left;">
-                  <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx 5500 students.</li>
-                  <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.</li>
-                  <li>Handled Linux server administration and Apache configuration; automated tasks like user account creation, managing student database, and system maintenance using Shell and automation scripts, reducing manual work by 200%.</li>
+                  <li>Enhanced visibility into both internal and external operations, pinpointing optimization opportunities.</li>
+                  <li>Streamlined processes through automation, improving their quality, and significantly reducing the required time investment.</li>
+                  <li>Developed solutions to facilitate public accounting audits and identify incorrectly recorded expenses.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Augmenify Infotech Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">August 2020 - November 2020</h5>
-                <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
+                <h4 style="text-align:left;"><a href="https://en.indicium.tech/" style="color:#12d640">Indicium - Data Science and Analytics</a><br> </h4>
+                <h5 style="text-align:left;">Intern Data Analyst</h5>
+                <p style="text-align:left;color:#fff"><em>July 2020 - Dezember 2020</em></p>
                 <ul style="text-align:left;">
-                  <li>Documented and coded server‑less web application for the hotel industry and designed REST API using Flask‑based JWT authentication.</li>
-                  <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking; enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
+                  <li>Execution of data analysis and business intelligence projects applied to marketing.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
-                <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+                <h4 style="text-align:left;"><a href="https://valorefoco.com.br/" style="color:#12d640">V&F - Business Intelligence</a><br> </h4>
+                <h5 style="text-align:left;">Consulting and Projects Intern</h5>
+                <p style="text-align:left;color:#fff"><em>November 2019 - April 2020</em></p>
                 <ul style="text-align:left;">
-                  <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the project.</li>
+                  <li>Carried out consulting projects related to business intelligence, assisting companies in making strategic decisions.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
-                <h5 style="text-align:left;">May 2018 - June 2018</h5>
-                <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
+                <h4 style="text-align:left;"><a href="https://acaojr.com.br/" target="_blank" style="color:#12d640">Ação Júnior - Management Consulting</a><br> </h4>
+                <h5 style="text-align:left;">Consultant</h5>
+                <p style="text-align:left;color:#fff"><em>September 2018 - July 2019</em></p>
                 <ul style="text-align:left;">
-                  <li>Optimized image processing algorithm of pill detection by creating customized MASKRCNN  algorithm, increasing accuracy by 15%; trained classification algorithm with the help of triplet loss to learn the image embedding of pill, reducing the hassle of collecting data of new pills. </li>
-                  <li>Devised a pipeline of the project to incorporate it into the product of the company. Implemented Restful APIs in Django that enabled our quality Analyst team to increase reporting speed by 46%.</li>
-                  <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling interactive charts in real-time.</li>
-                  <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing pipeline, increasing overall speed by 75%.</li>
+                  <li>Planning and execution of consulting projects in various sectors for small and medium-sized companies.</li>
+                  <li>Operation in the commercial area.</li>
                 </ul>
               </div>
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
-                <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
-                <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
-                <ul style="text-align:left;">
-                  <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting objects in high‑resolution satellite images, achieving 80% accuracy.</li>
-                  <li>Increased accessibility of satellite image data by redesigning database and application for showcasing graphical data.</li>
-                </ul>
-            </div>
           </div>
         </div>
     </div>
@@ -634,7 +622,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Coder", "Developer", "AI Enthusiast"],
+      strings: ["am a Data Analyst", "identify insights", "assist in decision-making"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
