Updated Projects and Skills Section
Added projects and changed skills topics

--- a/projects/adidassales.html
+++ b/projects/adidassales.html
@@ -43,13 +43,15 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">Adidas Sales Report</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Python, HTML, CSS, Bootstrap, GCP(Pub/Sub, Dataflow, Data Studio, GAE, BigQuery)</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Power BI</li>
+                <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li> -->
+                <li><strong>Report URL</strong>: <a href="https://app.powerbi.com/view?r=eyJrIjoiMTM1ZWE1MzItNDI0NS00MzcyLWE4MTUtNWNiYjFlNjllZmU3IiwidCI6ImZhNzk1MzFjLThjZTUtNGJkMy05N2VlLTI0NWU2ZWUyNjZiOCJ9" target="_blank">Link</a></li>
               </ul>
   
-                <p>
+              <!--  
+              <p>
                 Created a web‑based elastic application to provide the user with a detailed analysis of the sentiment of users on top 10 trending movies and songs with the help of Google Cloud Platform services.              
                 </p>
                 <p>
@@ -58,6 +60,7 @@
                 <p>
                 Tested the scalability of web application by generating 10000 user requests with the help of Apache Beam.
                 </p>
+              -->
             </div>
   
           </div>
@@ -84,5 +87,3 @@
   
   </body>
   </html>
-  
-  
