--- a/index.html
+++ b/index.html
@@ -371,7 +371,6 @@
 
 
 
-  <!-- CONTINUE FROM HERE -->
   <!-- Start Skills Section -->
 
   <section id="skills" class="services">
@@ -384,26 +383,20 @@
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#fff">
             <h4 style="text-align:left;color:#09203a">BI Tools</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/nodejs/nodejs-horizontal.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://www.vectorlogo.zone/logos/opencv/opencv-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="upload.wikimedia.org" width="90" height="70">
+                  <img src="assets\img\skills\power-bi.svg" alt="Power BI">
+                  <img src="assets\img\skills\tableau.svg" alt="Tableau">
+                  <img src="assets\img\skills\looker.svg" alt="Looker">
+                  <img src="assets\img\skills\metabase.svg" alt="Metabase">
               </p>
             </div>
             <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
               <h4 style="text-align:left;color:#09203a">Languages</h4>
                 <p style="text-align:left;">
-                  <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50" width="150">
-                  <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50" width="120">
-                  <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="upload.wikimedia.org" height="60" width="90">
-                  <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70" width="130">
-                  <img src="https://www.vectorlogo.zone/logos/postgresql/postgresql-horizontal.svg" alt="vectorlogo.zone" height="50" width="190">
-
+                  <img src="assets\img\skills\python.svg" alt="Python">
+                  <img src="assets\img\skills\rstudio.svg" alt="RStudio">
+                  <img src="assets\img\skills\mysql.svg" alt="MySQL">
+                  <img src="assets\img\skills\html5.svg" alt="HTML5">
+                  <img src="assets\img\skills\css3.svg" alt="CSS3">
                 </p>
           </div>
         </div>
@@ -443,6 +436,7 @@
   </section> <!--End Links Section -->
 
 
+  <!-- CONTINUE FROM HERE -->
   <!-- Start Contact Section -->
 
   <section id="contacts" class="contact">
