--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 
   <!-- Start Skills Section -->
-
+  <!-- SVGs edited using https://mediamodifier.com/svg-editor-->
   <section id="skills" class="services">
     <div class="container">
       <div class="section-title">
