Updated Job Description

--- a/index.html
+++ b/index.html
@@ -274,9 +274,10 @@
                 <h5 style="text-align:left;">Data Analyst</h5>
                 <p style="text-align:left;color:#fff"><em>June 2023 - Present</em></p>
                 <ul style="text-align:left;">
+                  <li>Utilized ETL and dashboards to automate accounting audits, achieving a 75% reduction in time needed for periodic audits.</li>
+                  <li>Aided in analyzing and visualizing data to identify inefficiencies in the state government's airline ticket purchasing process, potentially reducing annual spending by around R$ 20 million.</li>
                   <li>Enhanced visibility into both internal and external operations, pinpointing optimization opportunities.</li>
                   <li>Streamlined processes through automation, improving their quality, and significantly reducing the required time investment.</li>
-                  <li>Developed solutions to facilitate public accounting audits and identify incorrectly recorded expenses.</li>
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
