--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-power-bi">Power BI</li>
+            <li data-filter=".filter-python">Python</li>
             <!-- Filter template
             <li data-filter=".filter-project">Project</li>
             -->
@@ -349,6 +350,20 @@
           </div>
         </div>
         
+        <div class="col-lg-4 col-md-6 portfolio-item filter-python">
+          <center><h4>Country Logistic Visualization</h4></center>
+          <div class="portfolio-wrap">
+            <!-- Image by chandlervid85 on Freepik -->
+            <img src="assets/img/project/logistics-transportation-background.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              
+              <div class="portfolio-links">
+                <a href="projects/logisticvisualization.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- Project Template
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center><h4>Image recognition as Service</h4></center>
