--- a/projects/logisticvisualization.html
+++ b/projects/logisticvisualization.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Adidas Sales Report</title>
+    <title>Country Logistic Data Visualization</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,12 +43,15 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Adidas Sales Report</h2>
+              <h2 style="color:#12d640">Country Logistic Visualization Index</h2>
               <ul>
-                <li><strong>Tech Stack: </strong>Power BI</li>
+                <li><strong>Tech Stack: </strong>Python (Plotly, Dash)</li>
                 <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li> -->
-                <li><strong>Report URL: </strong><a href="https://app.powerbi.com/view?r=eyJrIjoiMTM1ZWE1MzItNDI0NS00MzcyLWE4MTUtNWNiYjFlNjllZmU3IiwidCI6ImZhNzk1MzFjLThjZTUtNGJkMy05N2VlLTI0NWU2ZWUyNjZiOCJ9" target="_blank">Link</a></li>
+                <li><strong>Github URL: </strong><a href="https://github.com/giorgioeller/Country-Logistic-Data-Visualization" target="_blank">Link</a></li>
+                <br>
+                <li><strong>Preview: </strong></li>
               </ul>
+              <img src="logisticvisualization.jpg" style="max-width: 100%; height: auto;" alt="Preview Image">
   
               <!--  
               <p>
