Uptaded Project Image
Added preview image to Adidas Sales.

--- a/projects/adidassales.html
+++ b/projects/adidassales.html
@@ -48,8 +48,11 @@
                 <li><strong>Tech Stack: </strong>Power BI</li>
                 <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li> -->
                 <li><strong>Report URL: </strong><a href="https://app.powerbi.com/view?r=eyJrIjoiMTM1ZWE1MzItNDI0NS00MzcyLWE4MTUtNWNiYjFlNjllZmU3IiwidCI6ImZhNzk1MzFjLThjZTUtNGJkMy05N2VlLTI0NWU2ZWUyNjZiOCJ9" target="_blank">Link</a></li>
+                <br>
+                <li><strong>Preview: </strong></li>
               </ul>
-  
+              <img src="adidassales.jpg" style="max-width: 100%; height: auto;" alt="Preview Image">
+
               <!--  
               <p>
                 Created a web‑based elastic application to provide the user with a detailed analysis of the sentiment of users on top 10 trending movies and songs with the help of Google Cloud Platform services.              
